--- a/templates/visitor_map.html
+++ b/templates/visitor_map.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}">
     {% endassets %}
     <style>
-      #map { height: 70vh; min-height: 400px; width: 100%; }
+      #map { height: 70vh; min-height: 400px; width: 100%; background: #d0d0d0; }
       .map-legend { position: absolute; bottom: 24px; left: 12px; z-index: 1000; background: #fff; padding: 10px 14px; border-radius: 6px; box-shadow: 0 1px 4px rgba(0,0,0,0.2); font-size: 14px; }
       .map-legend label { margin-left: 6px; }
       .map-legend .counts { margin-top: 6px; color: #555; }
@@ -38,7 +38,7 @@
   var botLayer = L.layerGroup();
   var worldBounds = L.latLngBounds([[-85.051129, -180], [85.051129, 180]]);
   var map = L.map('map', { maxBounds: worldBounds, maxBoundsViscosity: 1 }).setView([20, 0], 2);
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>', noWrap: true }).addTo(map);
+  L.tileLayer('/tiles/{z}/{x}/{y}.png', { attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>', noWrap: true }).addTo(map);
 
   var humanCount = 0, botCount = 0;
   visits.forEach(function (v) {
